Complete lab3
