# go/src/internal/features/lab2/service/dto.go
@@ -1,17 +1,17 @@
 package service
 
-type ReportItem struct {
+type Lab2ReportItem struct {
 	CourseName string `json:"course_name"`
 	ClassName  string `json:"class_name"`
 	Capacity   int    `json:"capacity"`
 }
 
 type In struct {
-	CourseName          string `json:"course_name"`
-	GroupEnrollmentYear string `json:"group_enrollment_year"`
-	GroupSemester       string `json:"group_semester"`
+	CourseName  string `json:"course_name"`
+	Year 		int `json:"year"`
+	Semester    int `json:"semester"`
 }
 
 type Out struct {
-	Report []ReportItem `json:"report"`
+	Report []Lab2ReportItem `json:"report"`
 }
